--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,7 @@
   "version": "0.0.1",
   "name": "headcount-server",
   "engines": {
-    "node": "^14.19",
-    "yarn": "1.22.10"
+    "node": "^14.19"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
