--- a/server/package.json
+++ b/server/package.json
@@ -54,11 +54,12 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "express-handlebars": "^5.2.0",
+    "got": "^12.1.0",
     "knex": "^2.0.0",
     "morgan": "^1.10.0",
-    "objection": "^3.0.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "objection": "^3.0.1",
     "objection-unique": "^1.2.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
