--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "prop-types": "~15.7",
-    "react": "~16.13",
+    "react": "17",
     "react-dom": "~16.13",
     "react-dropzone": "^11.3.1",
     "react-hot-loader": "^4.12.21",
