--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "e2e:run": "yarn workspace headcount-e2e e2e:run"
   },
   "engines": {
-    "node": "^14.19",
-    "yarn": "1.22.10"
+    "node": "^14.19"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.4.0",
+    "reactstrap": "^9.1.1"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0"
   }
 }
