--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,11 @@
     "node": "^14.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.0",
-    "babel-jest": "^28.1.0",
+    "@types/jest": "^28.1.1",
+    "babel-jest": "^28.1.1",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "eslint": "8.2.0",
@@ -41,7 +41,7 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "install-peerdeps": "^3.0.3",
-    "jest": "^28.1.0",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
     "webpack": "^5.3.2",
     "webpack-dev-middleware": "^4.0.0",
@@ -55,13 +55,13 @@
     "express": "^4.18.1",
     "express-handlebars": "^5.2.0",
     "got": "^12.1.0",
-    "knex": "^2.0.0",
+    "knex": "^2.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "objection": "^3.0.1",
     "objection-unique": "^1.2.2",
-    "passport": "^0.5.2",
+    "passport": "0.5",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3"
   }
