--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.4.0",
     "reactstrap": "^9.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
+    "postcss-loader": "^7.0.0",
+    "tailwindcss": "^3.1.8"
   }
 }
