--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "build": "./node_modules/.bin/webpack",
     "watch": "webpack --watch --progress",
     "dev": "yarn watch:css && ./node_modules/.bin/webpack-dev-server",
-    "tailwind": "npx tailwindcss-cli -i ./src/assets/tailwind.css -o ./src/assets/tailwind.css --watch"
+    "tailwind": "npx tailwindcss --input ./src/assets/style/main.pcss --output ./src/assets/style/tailwind.css --watch"
   },
   "license": "UNLICENSED",
   "private": true,
